# mathematical_operations_factory

./: AdditionMachine.cpp  AdditionMachine.hpp  BaseOperationMachine.hpp  CMakeLists.txt  DivisionMachine.cpp  DivisionMachine.hpp  Logger.cpp  Logger.hpp  Machines.hpp  MachinesService.cpp  MachinesService.hpp  Manager.cpp  Manager.hpp  MultiplicationMachine.cpp  MultiplicationMachine.hpp  Operation.hpp  OperationMachine.cpp  OperationMachine.hpp  README.md  SafeQueue.hpp  SubstractionMachine.cpp  SubstractionMachine.hpp  Worker.cpp  Worker.hpp  main.cpp
src/: CMakeLists.txt  Config.hpp  Customer.cpp  Customer.hpp  CustomerRequest.hpp  HelpersFunctions.cpp  HelpersFunctions.hpp  IMachinesService.hpp  IShop.hpp  IWarehouse.hpp  IWarehouseEntryPoint.hpp  IWorker.hpp  Machines.hpp  MachinesService.cpp  MachinesService.hpp  Magazine.cpp  Magazine.hpp  Manager.cpp  Manager.hpp  Operation.hpp  OperationResult.hpp  OperatonResult.hpp  Product.hpp  Shop.cpp  Shop.hpp  ThreadWrapper.hpp  Transport.cpp  Transport.hpp  Utils.cpp  Utils.hpp  Warehouse.cpp  Warehouse.hpp  WarehouseEntryPoint.cpp  WarehouseEntryPoint.hpp  Worker.cpp  Worker.hpp  WorkerHelper.hpp  WorkersPool.hpp  main.cpp
src/Tools/: IProgramStopControllerHelper.hpp  Logger.cpp  Logger.hpp  ProgramStopController.hpp  Randoms.hpp  ThreadSafeQueue.hpp  ThreadWrapper.hpp  ThreadsPool.hpp  Timer.hpp  WorkersPool.hpp
tests/: CMakeLists.txt  CustomerTest.cpp  MachineServiceTest.cpp  MachineTest.cpp  ManagerTest.cpp  ProgramStopControllerTest.cpp  ShopTest.cpp  ThreadSafeQueueTest.cpp  ThreadsPoolTest.cpp  TransportTest.cpp  WarehouseEntryPointTest.cpp  WarehouseTest.cpp  WorkerTest.cpp  WorkersPoolTest.cpp
tests/mocks/: MachinesServiceMock.hpp  ProgramStopControllerHelperMock.hpp  ShopMock.hpp  WarehouseEntryPointMock.hpp  WarehouseMock.hpp  WorkerMock.hpp
